service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patrickmoran
  labels:
    app: patrickmoran
spec:
  selector:
    app: patrickmoran
  ports:
    - port: 80
      targetPort: 80
